--- a/src/components/UserProfile/profilepage/Sidebar.module.css
+++ b/src/components/UserProfile/profilepage/Sidebar.module.css
@@ -24,11 +24,11 @@
 }
 
 .avatar {
-  width: 54px;
-  height: 54px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
   overflow: hidden;
-  background-color: var(--profile-button-bg, #0085FF);
+  background-color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -39,7 +39,7 @@
 .avatar img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   aspect-ratio: 1 / 1;
 }
 
