--- a/src/components/UserProfile/HamburgerMenu.module.css
+++ b/src/components/UserProfile/HamburgerMenu.module.css
@@ -18,4 +18,18 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  overflow: hidden;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2.5px solid var(--profile-button-bg, #0085FF);
+  aspect-ratio: 1 / 1;
+}
+
+.avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  aspect-ratio: 1 / 1;
 }
