--- a/src/components/UserProfile/SidebarMenu.module.css
+++ b/src/components/UserProfile/SidebarMenu.module.css
@@ -6,7 +6,7 @@
 
 .sidebar {
   position: fixed;
-  top: 94px;
+  top: 82px;
   right: -250px; /* مخفي على اليمين في البداية */
   width: 250px;
   height: fit-content;
@@ -35,10 +35,23 @@
   }
   
   .avatar {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
-    margin-right: 10px;
+    overflow: hidden;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2.5px solid var(--profile-button-bg, #0085FF);
+    aspect-ratio: 1 / 1;
+  }
+  
+  .avatar img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    aspect-ratio: 1 / 1;
   }
   
   .userInfo {
