--- a/src/components/UserProfile/profilepage/Sidebar.module.css
+++ b/src/components/UserProfile/profilepage/Sidebar.module.css
@@ -28,7 +28,7 @@
   height: 60px;
   border-radius: 50%;
   overflow: hidden;
-  background-color: #fff;
+  background-color: var(--profile-avatar-bg, #fff);
   display: flex;
   align-items: center;
   justify-content: center;
