--- a/src/components/UserProfile/HamburgerMenu.module.css
+++ b/src/components/UserProfile/HamburgerMenu.module.css
@@ -19,7 +19,7 @@
   height: 40px;
   border-radius: 50%;
   overflow: hidden;
-  background-color: #fff;
+  background-color: var(--profile-avatar-bg, #fff);
   display: flex;
   align-items: center;
   justify-content: center;
