--- a/src/components/Auth/ForgotPassword.css
+++ b/src/components/Auth/ForgotPassword.css
@@ -178,3 +178,8 @@ body.dark .auth-link {
 body.dark .auth-link a {
   color:var(--Btnbg-color);
 }
+
+body.dark .btn {
+  background-color: #fbd684;
+  color: #000000;
+}
