Fixing a bug in the customDate height

--- a/src/pages/SelectedFlights/styles/CustomDatePicker.module.css
+++ b/src/pages/SelectedFlights/styles/CustomDatePicker.module.css
@@ -16,6 +16,8 @@
     background: var(--bg-color);
     cursor: pointer;
     box-sizing: border-box;
+    height: 100%;
+    width: 100%;
   }
   
   .dateDisplay {
