--- a/src/pages/FlightDetails/DetailsOfTheFlight/DetailsOfTheFlight.module.css
+++ b/src/pages/FlightDetails/DetailsOfTheFlight/DetailsOfTheFlight.module.css
@@ -14,6 +14,7 @@ body.dark {
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
   position: relative;
+  z-index: 10;
 }
 
 /* Header */
