--- a/src/pages/SelectedFlights/styles/main.module.css
+++ b/src/pages/SelectedFlights/styles/main.module.css
@@ -226,7 +226,7 @@ color: var(--LightText-color);
   width: 100%;
   background-color: rgb(0,0,0,0.3);
   height: 100vh;
-  z-index: 1000;
+  z-index: 30;
   overflow-y: auto;
 }
 
@@ -237,6 +237,8 @@ color: var(--LightText-color);
 .detailsPanelContent {
   height: 100%;
   overflow-y: auto;
-  position: absolute;
+  position: fixed;
   right: 0;
+  top: 0;
+  z-index: 31;
 }
