--- a/src/pages/MyBookings/BookingCard.module.css
+++ b/src/pages/MyBookings/BookingCard.module.css
@@ -180,8 +180,8 @@
 .airlineLogo {
   width: 50px;
   height: 50px;
-  background-color: var(--Btnbg-color, #007bff);
-  color: var(--LightText-color, white);
+  background-color: #fff;
+  color: var(--Btnbg-color, #007bff);
   border-radius: 50%;
   display: flex;
   align-items: center;
