--- a/src/pages/MyBookings/TicketPrint.module.css
+++ b/src/pages/MyBookings/TicketPrint.module.css
@@ -107,14 +107,14 @@
 .airlineLogo {
   width: 60px;
   height: 60px;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: #fff;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 1.8rem;
   font-weight: bold;
-  color: white;
+  color: #007bff;
   border: 2px solid rgba(255, 255, 255, 0.3);
 }
 
