Making the search more userfriendly. Also disabling currency change at details page.

--- a/src/components/currency/currency.module.css
+++ b/src/components/currency/currency.module.css
@@ -4,6 +4,10 @@
     color:var(--DarkyellowText-color); 
     position: relative;
 }
+.disabled{
+    opacity: 0.5;
+    pointer-events: none;
+}
 .currency svg {
     width: 25px;
     height: 25px;
