--- a/src/pages/SelectedFlights/styles/container.module.css
+++ b/src/pages/SelectedFlights/styles/container.module.css
@@ -1,92 +1,101 @@
-
 * {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
-  .container {
-    display: grid;
-    margin-top: 150px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 100px;
-    gap: 25px;
-    grid-template-columns: 0.3fr 1fr;
-    grid-template-rows: 100px 1fr;
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important; 
-    max-width: 1200px;
-    --skeletonLoadingGradientWidth: 1200px;
-    --skeletonLoadingGradient:linear-gradient(to right, rgba(140, 140, 140, 0.05) 0%, rgba(140, 140, 140, 0.1) 15%, rgba(140, 140, 140, 0.05) 30%);
+.container {
+  padding-top: 79px;
+  font-family:
+    Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important;
+  --skeletonLoadingGradientWidth: 1200px;
+  --skeletonLoadingGradient: linear-gradient(
+    to right,
+    rgba(140, 140, 140, 0.05) 0%,
+    rgba(140, 140, 140, 0.1) 15%,
+    rgba(140, 140, 140, 0.05) 30%
+  );
+}
+.bodyContainer {
+  display: flex;
+  margin-top: 110px;
+  justify-content: center;
+  margin-bottom: 30px;
+  gap: 20px;
+}
+.bodyContainerLoading {
+  composes: bodyContainer;
+}
+/*loading stuff*/
+@keyframes loading {
+  0% {
+    background-position: -1200px 0;
   }
-  /*loading stuff*/
-  @keyframes loading {
-    0% {
-      background-position: -1200px 0;
-    }
-    100% {
-      background-position: 1200px 0;
-    }
+  100% {
+    background-position: 1200px 0;
   }
-  .loading {
-    animation: loading 3s linear;
-    animation-iteration-count: infinite;
-    background-image: var(--skeletonLoadingGradient);
-    background-size: var(--skeletonLoadingGradientWidth);
-  }
-  .loading.sidebarLoading {
-    width: 100%;
-    height: 6rem;
-  }
-  .loading.sidebarLoading:nth-child(2){
-    height: 20rem;
-  }
-  .loading.sidebarLoading + .loading.sidebarLoading{
-    margin-top: 5px;
-  }
-  .loading.mainLoading {
-    width: 100%;
-    height: 10rem;
-    border-radius: 3px;
-  }
-  .sidebarBase{
-    width: 100%;
-    grid-area: 2/1/3/2;
-  }
-  .mainBase {
-    width: 100%;
-    margin-bottom: 100px;
-  }
-  .loading.mainLoading + .loading.mainLoading{
-    margin-top: 10px;
-  }
-  /*error*/
-  .error {
-    color: red;
-    height: 300px;
-    margin-top: 100px;
-    font-size: 4rem;
-  }
-  .containerError,.containerNoData {
-    margin-top: 150px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .noDataText {
-    height: 300px;
-    margin-top: 100px;
-    font-size: 3rem;
-  }
-  .flightTextContainer {
-    grid-area: 2/1/3/3;
-  }
-  .flightTextContainer h2 {
-    text-align: center;
-  }
-  .flight {
-    width: 100%;
-    margin: 0 auto;
-    max-width: 900px;
-    margin-top: 10px;
-    padding: 10px;
-    position: relative;
-  }
+}
+.loading {
+  animation: loading 3s linear;
+  animation-iteration-count: infinite;
+  background-image: var(--skeletonLoadingGradient);
+  background-size: var(--skeletonLoadingGradientWidth);
+}
+.loading.sidebarLoading {
+  width: 328px;
+  height: 6rem;
+}
+.loading.sidebarLoading:nth-child(2) {
+  height: 20rem;
+}
+.loading.sidebarLoading + .loading.sidebarLoading {
+  margin-top: 5px;
+}
+.loading.mainLoading {
+  width: 100%;
+  height: 10rem;
+  border-radius: 3px;
+}
+.mainBase {
+  width: 800px;
+  margin-bottom: 30px;
+}
+.loading.mainLoading + .loading.mainLoading {
+  margin-top: 10px;
+}
+/*error*/
+.error {
+  color: red;
+  height: 300px;
+  margin-top: 100px;
+  font-size: 4rem;
+}
+.containerError,
+.containerNoData {
+  margin-top: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.noDataText {
+  height: 300px;
+  margin-top: 100px;
+  font-size: 3rem;
+}
+.flightTextContainer h2 {
+  text-align: center;
+  margin-top: 35px;
+}
+.flightTextContainer {
+  margin-top: 120px;
+  margin-bottom: -70px;
+}
+.flight {
+  width: 100%;
+  margin: 0 auto;
+  max-width: 820px;
+  margin-top: 10px;
+  padding: 10px;
+  position: relative;
+  border: 1px solid rgb(216, 220, 222);
+  padding-top: 20px;
+  border-radius: 12px;
+}
